fixed the grid for timelog content on small screens

--- a/src/app/dashboard/timelog/timelog-calendar/timelog-calendar.component.css
+++ b/src/app/dashboard/timelog/timelog-calendar/timelog-calendar.component.css
@@ -1,8 +1,6 @@
 .timelog-calendar{
     /* border:1px solid rgb(195, 236, 255); */
     background-color: #fcfcfc;
-
-    margin: 10px;
 }
 
 
